--- a/game-store-fe/src/index.css
+++ b/game-store-fe/src/index.css
@@ -3,10 +3,45 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     display: flex;
     justify-content: center;
-    align-items: center;
     min-height: 100vh;
     background-color: #f5f5f5;
 }
+
+.inventory {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+  }
+     
+  .item-container {
+    width: 95%;
+    display: flex;
+    flex-wrap: wrap;
+    border: 1px solid #111;
+  }
+  
+  .item {
+    max-width: 50px; /* Tamaño fijo para cada elemento */
+    margin: 1%;
+    padding: 5px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    text-align: start; 
+  }
+  
+  .item img {
+    max-width: 40px ; 
+  }
+  
+  .item p {
+    font-size: 12px;
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow:ellipsis;
+  }
+
