--- a/game-store-fe/src/index.css
+++ b/game-store-fe/src/index.css
@@ -1,47 +1,105 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    min-height: 100vh;
-    background-color: #f5f5f5;
+  min-height: 100vh;
+  background-color: #f5f5f5;
+}
+
+.search-bar {
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 20px;
+  margin-top: 5px;
+  border: #7749f8 1px solid;
+  border-radius: 5px;
+}
+
+.search-bar-header {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.search-input {
+  width: 200px;
+  height: 30px;
+  border-radius: 5px;
+  border: #7749f8 1px solid;
+  padding: 5px;
+  margin: 10px;
 }
 
 .inventory {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    margin: 20px;
-  }
-     
-  .item-container {
-    width: 95%;
-    display: flex;
-    flex-wrap: wrap;
-    border: 1px solid #111;
-  }
-  
-  .item {
-    max-width: 50px; /* Tamaño fijo para cada elemento */
-    margin: 1%;
-    padding: 5px;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    text-align: start; 
-  }
-  
-  .item img {
-    max-width: 40px ; 
-  }
-  
-  .item p {
-    font-size: 12px;
-    white-space: nowrap; 
-    overflow: hidden; 
-    text-overflow:ellipsis;
-  }
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+}
 
+.item-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+}
+
+.item-container {
+  margin: 10px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #111;
+}
+
+.item-card {
+  max-width: 55px;
+  margin: 1%;
+  padding: 5px;
+  box-sizing: content-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.item-card-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.item-img {
+  max-width: 40px;
+  justify-self: center;
+}
+
+.item-p {
+  font-size: 12px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  justify-self: center;
+}
+
+.item-btn {
+  margin-top: 5px;
+  width: 55px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.item-btn:hover {
+  background-color: #7749f8;
+}
+
+.toggle-btn {
+  margin-left: 20px;
+  margin-top: 5px;
+  border-radius: 5px;
+  width: 150px;
+  height: 30px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
