--- a/game-store-fe/src/index.css
+++ b/game-store-fe/src/index.css
@@ -20,38 +20,43 @@ body {
   border-radius: 5px;
 }
 
-.search-bar-header {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-
-.search-input {
-  width: 200px;
+.search-input{
+  width: 250px;
   height: 30px;
   border-radius: 5px;
-  border: #7749f8 1px solid;
-  padding: 5px;
-  margin: 10px;
-}
-
-.inventory {
-  display: flex;
-  flex-direction: column;
-  margin: 20px;
+  border: 1px solid #7749f8;
+  padding-left: 10px;
+  margin-left: 10px;
+  margin-top: 5px;
 }
 
 .item-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: start;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); /* Ajusta el ancho de las columnas según sea necesario */
+  grid-gap: 10px; /* Espacio entre elementos */
+  grid-auto-flow: dense; /* Colocar elementos en espacios vacíos */
+  align-content: start; /* Alinear la última fila en la parte superior */
+}
+
+
+.item-card-body {
+  width: 55px; /* Ajustar al ancho deseado */
+  height: 100px; /* Ajustar la altura deseada */
+  overflow: hidden; /* Evitar que el contenido se desborde */
+}
+
+.item-name {
+  font-size: 12px;
+  text-overflow: ellipsis;
+  text-align: center;
 }
 
 .item-container {
   margin: 10px;
   padding: 5px;
   border-radius: 5px;
-  border: 1px solid #111;
+  border: 1px solid #7749f8;
+  max-width: 80px
 }
 
 .item-card {
@@ -62,35 +67,18 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-
-.item-card-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  align-items: center; 
+  text-align: center; 
 }
 
 .item-img {
   max-width: 40px;
-  justify-self: center;
 }
 
-.item-p {
+.item-quantity {
   font-size: 12px;
-  white-space: nowrap;
-  overflow: hidden;
   text-overflow: ellipsis;
   justify-self: center;
-}
-
-.item-btn {
-  margin-top: 5px;
-  width: 55px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-.item-btn:hover {
-  background-color: #7749f8;
 }
 
 .toggle-btn {
@@ -101,5 +89,95 @@ body {
   height: 30px;
   font-size: 16px;
   border: none;
+  cursor: pointer;
+}
+
+.quantity-selector{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5px;
+  border-radius: 5px;
+  justify-content: space-around;
+  width: 125px;
+
+}
+
+.quantity-input{
+  width: 40px;
+  height: 20px;
+  border-radius: 5px; 
+  margin-top: auto;
+
+}
+
+.quantity-input input{
+  text-align: center;
+}
+
+.quantity-btn{
+  margin-top: 5px;
+  width: 25px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal-open-btn {
+  margin-top: auto;
+  border-radius: 5px;
+  border: #7749f8 3px solid;
+  background-color: #7749f8;
+  color: white;
+  cursor: pointer;
+}
+
+.modal-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #7749f8;
+  max-width: 200px
+}
+
+.modal-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-title {
+  text-align: center;
+  font-size: 20px;
+}
+
+.modal-img{
+  max-width: 60px;
+  max-height: 60px;
+  border-radius: 5px;
+  border: #7749f8 1px solid;
+  margin-top: 5px;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-btn {
+  margin-top: 5px;
+  width: 55px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.close-btn {
+  margin-top: 5px;
+  width: 55px;
+  border-radius: 5px;
   cursor: pointer;
 }
