--- a/game-store-fe/src/index.css
+++ b/game-store-fe/src/index.css
@@ -30,6 +30,12 @@ body {
   margin-top: 5px;
 }
 
+.hr {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border: #7749f8 1px solid;
+}
+
 .item-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); /* Ajusta el ancho de las columnas según sea necesario */
@@ -40,39 +46,44 @@ body {
 
 
 .item-card-body {
-  width: 55px; /* Ajustar al ancho deseado */
-  height: 100px; /* Ajustar la altura deseada */
-  overflow: hidden; /* Evitar que el contenido se desborde */
+  width: 80px; /* Ajustar al ancho deseado */
+  height: 107px; /* Ajustar la altura deseada */
+  overflow: hidden;
 }
 
 .item-name {
-  font-size: 12px;
-  text-overflow: ellipsis;
-  text-align: center;
+  margin-top: 5px;
+  font-size: 12px !important;
+  text-overflow: ellipsis !important;
+  white-space: nowrap !important;
+  overflow: hidden !important;
+
 }
 
 .item-container {
   margin: 10px;
-  padding: 5px;
   border-radius: 5px;
   border: 1px solid #7749f8;
-  max-width: 80px
+  background-color: #f5f5f5;
+  height: 180px;
 }
 
 .item-card {
-  max-width: 55px;
-  margin: 1%;
+  max-width: 100px;
   padding: 5px;
   box-sizing: content-box;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
   text-align: center; 
 }
 
 .item-img {
-  max-width: 40px;
+  margin-top: 2px;
+  max-width: 60px;
+  padding: 2px;
+  border: 1px solid #7749f8;
 }
 
 .item-quantity {
@@ -106,10 +117,10 @@ body {
 
 .quantity-input{
   width: 40px;
-  height: 20px;
+  height: 26px;
   border-radius: 5px; 
   margin-top: auto;
-
+  text-align: center;
 }
 
 .quantity-input input{
@@ -124,23 +135,20 @@ body {
 }
 
 .modal-open-btn {
-  margin-top: auto;
-  border-radius: 5px;
-  border: #7749f8 3px solid;
-  background-color: #7749f8;
-  color: white;
-  cursor: pointer;
+  align-self: flex-end !important;
+  border-radius: 5px !important;
+  border: #7749f8 3px solid !important;
+  background-color: #7749f8 !important;
+  width: 70px !important;
+  height: 55px !important;
+  color: white !important;
+  cursor: pointer !important;
+  font-size: 14px !important;
+  margin-top: 5px !important;
 }
 
-.modal-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-  border-radius: 5px;
-  border: 1px solid #7749f8;
-  max-width: 200px
+.modal-content {
+  width: 80% !important;
 }
 
 .modal-body {
@@ -150,27 +158,29 @@ body {
   align-items: center;
 }
 
-.modal-title {
-  text-align: center;
-  font-size: 20px;
+.modal-header {
+  display: flex;
+  justify-content: center
 }
 
 .modal-img{
-  max-width: 60px;
-  max-height: 60px;
+  max-width: 100px;
+  max-height: 100px;
   border-radius: 5px;
   border: #7749f8 1px solid;
   margin-top: 5px;
+  padding: 2px;
 }
 
 .modal-footer {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between !important;
 }
 
 .modal-btn {
+  margin-right: 5px;
   margin-top: 5px;
-  width: 55px;
+  width: 100px;
   border-radius: 5px;
   cursor: pointer;
 }
@@ -180,4 +190,4 @@ body {
   width: 55px;
   border-radius: 5px;
   cursor: pointer;
-}
+} 
