--- a/game-store-fe/src/index.css
+++ b/game-store-fe/src/index.css
@@ -10,14 +10,13 @@ body {
 }
 
 .search-bar {
-  width: 80vw;
+  width: 25%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin-left: 20px;
-  margin-top: 5px;
-  border: #7749f8 1px solid;
-  border-radius: 5px;
+  margin-right: 20px;
+  
 }
 
 .search-input{
@@ -90,17 +89,6 @@ body {
   font-size: 12px;
   text-overflow: ellipsis;
   justify-self: center;
-}
-
-.toggle-btn {
-  margin-left: 20px;
-  margin-top: 5px;
-  border-radius: 5px;
-  width: 150px;
-  height: 30px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
 }
 
 .quantity-selector{
