--- a/game-store-fe/src/index.css
+++ b/game-store-fe/src/index.css
@@ -14,19 +14,15 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 20px;
+  margin-left: 10px;
   margin-right: 20px;
-  
 }
 
 .search-input{
-  width: 250px;
-  height: 30px;
   border-radius: 5px;
   border: 1px solid #7749f8;
   padding-left: 10px;
   margin-left: 10px;
-  margin-top: 5px;
 }
 
 .hr {
@@ -41,30 +37,6 @@ body {
   grid-gap: 10px; /* Espacio entre elementos */
   grid-auto-flow: dense; /* Colocar elementos en espacios vacíos */
   align-content: start; /* Alinear la última fila en la parte superior */
-}
-
-
-.item-card-body {
-  width: 80px; /* Ajustar al ancho deseado */
-  height: 107px; /* Ajustar la altura deseada */
-  overflow: hidden;
-}
-
-.item-name {
-  margin-top: 5px;
-  font-size: 12px !important;
-  text-overflow: ellipsis !important;
-  white-space: nowrap !important;
-  overflow: hidden !important;
-
-}
-
-.item-container {
-  margin: 10px;
-  border-radius: 5px;
-  border: 1px solid #7749f8;
-  background-color: #f5f5f5;
-  height: 180px;
 }
 
 .item-card {
@@ -86,9 +58,15 @@ body {
 }
 
 .item-quantity {
+  width: 20px;
+  position: absolute;
   font-size: 12px;
-  text-overflow: ellipsis;
+  font-weight: bold;
   justify-self: center;
+  margin-top: 42px;
+  background-color: #fff;
+  border: 1px solid #7749f8;
+  color: #7749f8;
 }
 
 .quantity-selector{
