--- a/game-store-fe/src/pages/Invetory/Inventory.css
+++ b/game-store-fe/src/pages/Invetory/Inventory.css
@@ -3,7 +3,7 @@
   margin-top: 20px;
   border: #7749f8 1px solid;
   border-radius: 5px;
-  margin: 10px;
+  margin: 10px 10px 0px 10px;
 }
 
 .inventory-header {
@@ -16,12 +16,12 @@
 .toggle-container {
   position: relative;
   width: 150px;
-  height: 32px;
+  height: 30px;
   background-color: #9d0505;
   cursor: pointer;
   user-select: none;
   border-radius: 3px;
-  padding: 3px;
+  padding: 4px;
 }
 
 .toggle-btn {
@@ -36,7 +36,7 @@
   color: #fff;
   background-color: #7749f8;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-  padding: 6px 12px;
+  padding: 4px 6px;
   border-radius: 3px;
   position: absolute;
   transition: all 0.3s ease;
@@ -47,3 +47,19 @@
   background-color: #03880a;
   left: 60px;
 }
+
+.modal-container {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .invisible-modal-button {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0; /* Hace que el botón sea invisible */
+    cursor: pointer;
+  }
+  
