--- a/game-store-fe/src/index.css
+++ b/game-store-fe/src/index.css
@@ -6,42 +6,42 @@
 
 body {
   min-height: 100vh;
-  background-color: #f5f5f5;
+  background-color: #3A083E !important;
 }
 
 .search-bar {
-  width: 25%;
+  width: 35%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 10px;
   margin-right: 20px;
 }
 
 .search-input{
   border-radius: 5px;
-  border: 1px solid #7749f8;
+  border-top: 2px solid #000;
   padding-left: 10px;
   margin-left: 10px;
 }
 
-.hr {
-  margin-top: 5px;
-  margin-bottom: 5px;
-  border: #7749f8 1px solid;
-}
+
 
 .item-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); /* Ajusta el ancho de las columnas según sea necesario */
-  grid-gap: 10px; /* Espacio entre elementos */
+  grid-template-columns: repeat(auto-fill, minmax(65px, 1fr)); /* Ajusta el ancho de las columnas según sea necesario */
+  grid-gap: 3px; /* Espacio entre elementos */
   grid-auto-flow: dense; /* Colocar elementos en espacios vacíos */
   align-content: start; /* Alinear la última fila en la parte superior */
+  background-color: #fff;
+  padding: 15px;
+  min-height: 80vh;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .item-card {
-  max-width: 100px;
-  padding: 5px;
+  max-width: 60px;
+  padding: 0px;
   box-sizing: content-box;
   display: flex;
   flex-direction: column;
@@ -51,11 +51,14 @@ body {
 }
 
 .item-img {
+  background-color: darkgray;
   margin-top: 2px;
   max-width: 60px;
   padding: 2px;
-  border: 1px solid #7749f8;
+  border: 1px solid #000;
 }
+
+
 
 .item-quantity {
   width: 20px;
