--- a/game-store-fe/src/pages/Invetory/Inventory.css
+++ b/game-store-fe/src/pages/Invetory/Inventory.css
@@ -1,26 +1,28 @@
 .inventory {
-  max-width: 1200px;
+  width: 80% !important;
+  padding: 0 0 0 0 !important;
   margin-top: 20px;
-  border: #7749f8 1px solid;
   border-radius: 5px;
-  margin: 10px 10px 0px 10px;
+  
 }
 
 .inventory-header {
   display: flex;
   justify-content: flex-start;
-  border-bottom: #7749f8 1px solid;
   padding: 5px;
+  background-color: #7749f8;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
 }
 
 .toggle-container {
   position: relative;
   width: 150px;
-  height: 30px;
-  background-color: #9d0505;
+  height: 25.6px;
+  background-color: #fff;
   cursor: pointer;
   user-select: none;
-  border-radius: 3px;
+  border-radius: 15px;
   padding: 4px;
 }
 
@@ -30,21 +32,21 @@
   align-items: center;
   box-sizing: border-box;
   width: 85px;
-  font-size: 14px;
+  font-size: 13px;
   line-height: 14px;
   cursor: pointer;
   color: #fff;
   background-color: #7749f8;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-  padding: 4px 6px;
-  border-radius: 3px;
+  padding: 2px 2px;
+  border-radius: 15px;
   position: absolute;
   transition: all 0.3s ease;
   left: 5px;
 }
 
 .disable {
-  background-color: #03880a;
+  background-color: #7749f8;
   left: 60px;
 }
 
