--- a/game-store-fe/src/index.css
+++ b/game-store-fe/src/index.css
@@ -26,8 +26,6 @@ body {
   height: 30px;
 }
 
-
-
 .item-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(65px, 1fr));
@@ -42,9 +40,7 @@ body {
 }
 
 .item-card {
-  width: 60px;
-  height: 60px;
-  padding: 0px;
+  position: relative;
   box-sizing: content-box;
   display: flex;
   flex-direction: column;
@@ -53,26 +49,25 @@ body {
   text-align: center; 
 }
 
-.item-img {
-  background-color: #d5d5d5;
-  margin-top: 2px;
-  max-width: 60px;
-  padding: 2px;
-  border: 1px solid #000;
-}
-
-
-
 .item-quantity {
   width: 20px;
   position: absolute;
+  top: 84%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-size: 12px;
   font-weight: bold;
   justify-self: center;
-  margin-top: 42px;
   background-color: #fff;
   border: 1px solid #7749f8;
   color: #7749f8;
+}
+
+.item-img {
+  background-color: #d5d5d5;
+  margin-top: 2px;
+  padding: 2px;
+  border: 1px solid #000;
 }
 
 .quantity-selector{
