--- a/game-store-fe/src/pages/Offer/offer.css
+++ b/game-store-fe/src/pages/Offer/offer.css
@@ -1,19 +1,18 @@
 .offer-container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10vh;
-    max-height: 100vh;
+    padding: 7vh;
+    height: 100vh;
 }
 
 .offer-list {
   width: 80%;
-  max-height: 85vh;
-  min-height: 85vh;
   margin: 0 auto;
   border-radius: 15px;
-  overflow: hidden;
-  background-color: #d4d4d4;
+  overflow: auto;
+  height: 41em;
 }
 
 .table {
@@ -59,13 +58,13 @@
 .page-btn-container{
   display: flex;
   flex-direction: column;
-
+  margin-top: auto;
 }
 
 .page-btn {
   display: flex;
   justify-content: center;
-  background-color: #fff;
+  background-color: transparent;
 }
 
 .page-btn ul {
@@ -80,12 +79,11 @@
   color: #fdfcfe;
   border-radius: 12px;
   width: 100%;
-  max-width: 130px;
-  height: 45px;
+  max-width: 110px;
+  height: 35px;
   font-size: 18px;
   font-weight: bold;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 5px 0;
   cursor: pointer;
   border: none;
 }
@@ -96,32 +94,39 @@
   align-items: center;
 }
 
-.pagination {
-  color: #fdfcfe;
-  border-radius: 5px;
-}
-
 .pagination li {
-  color: #5227cc !important;
+  color: transparent;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 30px;
   cursor: pointer;
   margin: 4px;
 }
 
 .page-link {
   color: #fdfcfe !important;
-  background-color: #5227cc !important;
+  background-color: transparent !important;
   border-radius: 5px;
+  font-size: 20px;
 }
 
+.page-item .active {
+  border-color: #5227cc !important;
+}
 .pagination li a {
-  color: #fdfcfe;
-  background-color: #5227cc;
   border-radius: 5px;
+  border-color: #5227cc;
+}
+
+.pagination li a:hover {
+  background-color: #5227cc;
+  color: transparent;
+  border-color: #5227cc;
 }
 
 .pagination li a:active {
   background-color: #5227cc;
-  color: #fdfcfe;
+  color: transparent;
+  border-color: #5227cc !important;
 }
+
+
