--- a/game-store-fe/src/index.css
+++ b/game-store-fe/src/index.css
@@ -1,3 +1,5 @@
+/* GENERAL CONFIG */
+
 * {
   margin: 0;
   padding: 0;
@@ -5,9 +7,10 @@
 }
 
 body {
-  min-height: 100vh;
   background-color: #221a37 !important;
 }
+
+/* SEARCH BAR */
 
 .search-bar {
   width: 280px;
@@ -26,7 +29,7 @@ body {
   height: 30px;
 }
 
-
+/* ITEM LIST */
 
 .item-list {
   display: grid;
@@ -39,7 +42,15 @@ body {
   min-height: 65vh;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
+  overflow-y: scroll;
+  max-height: 70vh;
 }
+
+.item-list::-webkit-scrollbar {
+  display: none;
+}
+
+/* ITEMS */
 
 .item-card {
   max-width: 60px;
@@ -60,8 +71,6 @@ body {
   border: 1px solid #000;
 }
 
-
-
 .item-quantity {
   width: 20px;
   position: absolute;
@@ -73,6 +82,8 @@ body {
   border: 1px solid #7749f8;
   color: #7749f8;
 }
+
+/* QUANTITY */
 
 .quantity-selector{
   display: flex;
@@ -92,10 +103,7 @@ body {
   border-radius: 5px; 
   margin-top: auto;
   text-align: center;
-}
-
-.quantity-input input{
-  text-align: center;
+  font-size: 20px;
 }
 
 .quantity-btn{
@@ -105,21 +113,16 @@ body {
   cursor: pointer;
 }
 
-.modal-open-btn {
-  align-self: flex-end !important;
-  border-radius: 5px !important;
-  border: #7749f8 3px solid !important;
-  background-color: #7749f8 !important;
-  width: 70px !important;
-  height: 55px !important;
-  color: white !important;
-  cursor: pointer !important;
-  font-size: 14px !important;
-  margin-top: 5px !important;
-}
+/* MODAL */
 
 .modal-content {
-  width: 80% !important;
+  border-radius: none !important;
+}
+
+.modal-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .modal-body {
@@ -129,36 +132,22 @@ body {
   align-items: center;
 }
 
-.modal-header {
-  display: flex;
-  justify-content: center
-}
-
-.modal-img{
-  max-width: 100px;
-  max-height: 100px;
-  border-radius: 5px;
-  border: #7749f8 1px solid;
-  margin-top: 5px;
-  padding: 2px;
+.modal-body img{
+  width: 150px;
+  height: 150px;
+  border: #000 2px solid;
+  border-radius: 15px;
 }
 
 .modal-footer {
   display: flex;
-  justify-content: space-between !important;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.modal-btn {
-  margin-right: 5px;
-  margin-top: 5px;
-  width: 100px;
-  border-radius: 5px;
-  cursor: pointer;
+.btn{
+  background-color: #7749f8 !important;
+  color: #fff !important;
+  border: none !important;
 }
-
-.close-btn {
-  margin-top: 5px;
-  width: 55px;
-  border-radius: 5px;
-  cursor: pointer;
-} 
