--- a/game-store-fe/src/index.css
+++ b/game-store-fe/src/index.css
@@ -62,12 +62,30 @@ body {
   text-align: center; 
 }
 
+.recicler-Item{
+ position: absolute;
+ display: flex;
+ width: 60px;
+ height: 60px;
+}
+
+.recicler-Item img{
+  width: 10px;
+  height: 10px;
+  position:absolute;
+  margin-top: 3px;
+  cursor: pointer;
+  z-index: 2;
+}
+
 .item-img {
   background-color: #d5d5d5;
-  margin-top: 2px;
+  margin-top: 2px ;
   max-width: 60px;
   padding: 2px;
   border: 1px solid #000;
+  cursor: pointer;
+  z-index: 1;
 }
 
 .item-quantity {
@@ -80,6 +98,8 @@ body {
   background-color: #fff;
   border: 1px solid #7749f8;
   color: #7749f8;
+  cursor: pointer;
+  z-index: 2;
 }
 
 /* QUANTITY */
