--- a/game-store-fe/src/index.css
+++ b/game-store-fe/src/index.css
@@ -73,7 +73,8 @@ body {
   width: 10px;
   height: 10px;
   position:absolute;
-  margin-top: 3px;
+  margin-top: 5px;
+  margin-left: 4px;
   cursor: pointer;
   z-index: 2;
 }
