+ spinner de carga, correcion de estilos

--- a/game-store-fe/src/index.css
+++ b/game-store-fe/src/index.css
@@ -159,3 +159,15 @@ body {
   cursor: pointer;
 }
 
+.spinner-container {
+  position : absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100% !important;
+  height: 100% !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+
