--- a/game-store-fe/src/pages/Offer/offer.css
+++ b/game-store-fe/src/pages/Offer/offer.css
@@ -42,6 +42,10 @@
   height: 100% !important;
 }
 
+.tr-spinner {
+  border-color: transparent !important;
+}
+
 .th-offer {
   font-size: 25px !important;
   font-weight: bold !important;
@@ -104,6 +108,7 @@
   margin-right: auto;
 
 }
+
 
 .btn-trade {
   
