--- a/game-store-fe/src/pages/offerMaker/offerMaker.css
+++ b/game-store-fe/src/pages/offerMaker/offerMaker.css
@@ -14,20 +14,29 @@
     margin: 0 auto;
 }
 
-.drop { 
+.drop {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     position: absolute;
-    margin: 5px 230px;
-    z-index: 999;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    top: 43%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 500;
+    border-radius: 10px;
+    max-height: 38vh;
+    min-width: 30vw;
+    max-width: 60vw;
     overflow: hidden;
+    background-color: blue;
+    overflow-y: auto;
 }
 
+.drop::-webkit-scrollbar {
+    display: none;
+  }
+
 .om-Body {
-    margin-top: 10px;
-    
+    margin-top: 10px;  
 }
 
 .om-body-selector{
@@ -38,17 +47,18 @@
 }
 .content {
     display: flex;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-bottom: 20px;
+    padding: 10px;
     width: 100%;
-    max-height: 50px;
     justify-content: space-between;
+    
+}
 
+.quantity-selector {
+    transform: translateY(-8%);
 }
 
 .quantity-input {
-    margin-bottom: 8px;
+    margin-bottom: 13px;    
 }
 
 .om-Body .item-list {
