--- a/game-store-fe/src/pages/offerMaker/offerMaker.css
+++ b/game-store-fe/src/pages/offerMaker/offerMaker.css
@@ -1,93 +1,118 @@
 .om {
-    height: 100vh;
-    width: 70vw;
-    padding-top: 10vh;
-    margin: 0 auto;
+  height: 100vh;
+  width: 70vw;
+  padding-top: 10vh;
+  margin: 0 auto;
 }
 
 .om h1 {
-    text-align: center;
-    color: #7749f8;
+  text-align: center;
+  color: #7749f8;
 }
 
-.search-bar{
-    margin: 0 auto;
+.search-bar {
+  margin: 0 auto;
 }
 
 .drop {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 43%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 500;
-    border-radius: 10px;
-    max-height: 38vh;
-    min-width: 30vw;
-    max-width: 60vw;
-    overflow: hidden;
-    background-color: blue;
-    overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  border-radius: 10px;
+  height: 38vh;
+  min-width: 30vw;
+  overflow: hidden;
+  background-color: blue;
+  overflow-y: auto;
 }
 
 .drop::-webkit-scrollbar {
-    display: none;
-  }
+  display: none;
+}
+
+.drop:last-child{
+    padding-bottom: 10px;
+}
 
 .om-Body {
-    margin-top: 10px;  
+  margin-top: 10px;
 }
 
-.om-body-selector{
-    display: flex;
-    min-height: 35vh;
-    flex-direction: column;
-
+.om-body-selector {
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px !important;
+  overflow: hidden;
 }
 .content {
-    display: flex;
-    padding: 10px;
-    width: 100%;
-    justify-content: space-between;
-    
+  display: flex;
+  padding-top: 10px;
+  padding-left: 10px;
+  width: 100%;
+  justify-content: space-between;
 }
 
+
+
 .quantity-selector {
-    transform: translateY(-8%);
+  transform: translateY(-8%);
 }
 
 .quantity-input {
-    margin-bottom: 13px;    
+  margin-bottom: 13px;
 }
 
 .om-Body .item-list {
-    margin-bottom: 10px;
-    max-height: 300px !important;
-    max-width: 100% !important;
-    min-height: 100px !important;
-    border-radius: none !important; /* pasar a 15px si se requiere despues */
-    border-bottom-left-radius: 0px !important;
-    border-bottom-right-radius: 0px !important;
+  margin-bottom: 10px;
+  max-height: 100% !important;
+  min-height: 150px !important;
+  max-width: 100% !important;
+  border-radius: 15px !important; /* pasar a 15px si se requiere despues */
+  border-bottom-left-radius: 15px !important;
+  border-bottom-right-radius: 15px !important;
 }
+
 
 .content-row h2 {
-    color: #7749f8 !important;
+  color: #7749f8 !important;
 }
 
-.stage1-btn{
-    margin: 20px;
-    display: flex;
-    flex-direction: row-reverse;
+.stage1-btn {
+  margin: 20px;
+  display: flex;
+  flex-direction: row-reverse;
 }
 
-.stage2-btn{
-    margin: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.stage2-btn {
+  margin: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .final-content p {
-    color: #7749f8;
+  color: #7749f8;
 }
+
+.add-btn {
+  background-color: #5227cc;
+  color: #fdfcfe;
+  border-radius: 12px;
+  width: 100%;
+  max-width: 110px;
+  height: 35px;
+  font-size: 18px;
+  font-weight: bold;
+  margin: auto 0;
+  cursor: pointer;
+  border: none;
+}
+
+.quantity-btn {
+  background-color: #7749f8;
+  color: #ffffff;
+  font-weight: bold;
+  border: 1px solid black;
+  padding: 2px;
+}
+
