--- a/game-store-fe/src/pages/offerMaker/offerMaker.css
+++ b/game-store-fe/src/pages/offerMaker/offerMaker.css
@@ -11,7 +11,16 @@
 }
 
 .search-bar {
-  margin: 0 auto !important;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-input {
+ width: 40%;
+ border-radius: 5px;
+
 }
 
 .FilterContent {
