correcion de logica y de estilos

--- a/game-store-fe/src/pages/offerMaker/offerMaker.css
+++ b/game-store-fe/src/pages/offerMaker/offerMaker.css
@@ -60,6 +60,7 @@
   padding-left: 10px;
   justify-content: center !important;
   text-align: center !important;
+  font-weight: bold;
 }
 
 .FilterContent::-webkit-scrollbar {
