--- a/game-store-fe/src/pages/offerMaker/offerMaker.css
+++ b/game-store-fe/src/pages/offerMaker/offerMaker.css
@@ -1,318 +1,292 @@
-.om {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-}
+.offerMaker-container {
+  .om {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+  }
 
-.om h1,
-h3 {
-  text-align: center;
-  color: #7749f8;
-}
+  .om h1,
+  h3 {
+    text-align: center;
+    color: #7749f8;
+  }
 
-.search-bar {
-  background-color: #d0d0d0;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px 10px !important;
-  margin: 0 !important;
-}
+  .search-bar {
+    background-color: #d0d0d0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 10px !important;
+    margin: 0 !important;
+  }
 
-.search-input {
-  width: 95%;
-  border-radius: 5px;
-  padding: 0 10px !important;
-  margin-left: 15px !important;
-  margin-right: 15px !important;
-  border: 2px solid darkgray;
-}
+  .search-input {
+    width: 95%;
+    border-radius: 5px;
+    padding: 0 10px !important;
+    margin-left: 15px !important;
+    margin-right: 15px !important;
+    border: 2px solid darkgray;
+  }
 
-.FilterContent {
-  display: flex;
-  flex-direction: column;
-  border-radius: 10px;
-  overflow: hidden;
-  background-color: #fdfcfe;
-  overflow-y: auto;
-}
+  .FilterContent {
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: #fdfcfe;
+    overflow-y: auto;
+  }
 
-/* Estilos para la scrollbar en navegadores Webkit (Chrome, Safari) */
-.FilterContent::-webkit-scrollbar {
-  width: 8px; /* Ancho de la scrollbar */
-}
+  /* Estilos para la scrollbar en navegadores Webkit (Chrome, Safari) */
+  .FilterContent::-webkit-scrollbar {
+    width: 8px; /* Ancho de la scrollbar */
+  }
 
-.FilterContent::-webkit-scrollbar-track {
-  background: transparent; /* Fondo de la track */
-}
+  .FilterContent::-webkit-scrollbar-track {
+    background: transparent; /* Fondo de la track */
+  }
 
-.FilterContent::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.425); /* Color de la barrita */
-  border-radius: 10px; /* Bordes redondeados */
-}
+  .FilterContent::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.425); /* Color de la barrita */
+    border-radius: 10px; /* Bordes redondeados */
+  }
 
-/* Eliminar las flechas de desplazamiento en Webkit */
-.FilterContent::-webkit-scrollbar-button {
-  display: none;
-}
-/* Estilos de la tabla */
-.table {
-  width: 100%;
-}
+  /* Eliminar las flechas de desplazamiento en Webkit */
+  .FilterContent::-webkit-scrollbar-button {
+    display: none;
+  }
+  /* Estilos de la tabla */
+  .table {
+    width: 100%;
+  }
 
-.tr-content {
-  display: flex;
-  flex-direction: row;
-}
+  .tr-content {
+    display: flex;
+    flex-direction: row;
+  }
 
-.content {
-  width: 50%;
-  flex-direction: row;
-  display: flex;
-}
+  .content {
+    width: 50%;
+    flex-direction: row;
+    display: flex;
+  }
 
-.content img {
-  margin-left: 15px;
-  padding: 2px;
-  margin-right: 5px;
-  width: 50px;
-  border: 1px solid black;
-  background-color: #fdfcfe;
-}
+  .content img {
+    margin-left: 15px;
+    padding: 2px;
+    margin-right: 5px;
+    width: 50px;
+    border: 1px solid black;
+    background-color: #fdfcfe;
+  }
 
-.content p {
-  display: flex;
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-right: auto;
-  padding-left: 10px;
-  justify-content: center !important;
-  font-weight: bold;
-}
+  .content p {
+    display: flex;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: auto;
+    padding-left: 10px;
+    justify-content: center !important;
+    font-weight: bold;
+  }
 
-.quantity-content {
-  display: flex;
-  flex-direction: row-reverse;
-  width: 100%;
-}
+  .quantity-content {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 100%;
+  }
 
-.om-button-add {
-  display: flex;
-  justify-content: center;
-}
+  .om-button-add {
+    display: flex;
+    justify-content: center;
+  }
 
-.om-body {
-  height: 80vh;
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  justify-content: space-evenly;
-  width: 100%;
-  padding: 5px;
-}
+  .om-body {
+    height: 80vh;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-evenly;
+    width: 100%;
+    padding: 5px;
+  }
 
-.select-body {
-  display: flex;
-  width: 40%;
-  height: auto;
-  flex-direction: column;
-  border: #5227cc 4px solid;
-  border-radius: 15px;
-  background-color: #fdfcfe;
-}
+  .select-body {
+    display: flex;
+    width: 40%;
+    height: auto;
+    flex-direction: column;
+    border: #5227cc 4px solid;
+    border-radius: 15px;
+    background-color: #fdfcfe;
+  }
 
-.om-List {
-  display: flex;
-  flex-direction: column;
-  width: 40%;
-  height: 100%;
-  border: #5227cc 4px solid;
-  border-radius: 15px;
-  overflow: hidden;
-  background-color: #fdfcfe;
-}
+  .om-List {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    height: 100%;
+    border: #5227cc 4px solid;
+    border-radius: 15px;
+    overflow: hidden;
+    background-color: #fdfcfe;
+  }
 
-.om-List-header {
-  background-color: #d0d0d0;
-  height: 70px;
-}
+  .om-List-header {
+    background-color: #d0d0d0;
+    height: 70px;
+  }
 
-.om-body p {
-  color: #7749f8;
-}
+  .om-body p {
+    color: #7749f8;
+  }
 
-.quantity-selector {
-  margin-top: 0px !important;
-  display: flex;
-  width: 50%;
-  min-width: 150px;
-  flex-direction: row-reverse;
-  justify-content: space-between !important;
-}
+  .hasReset {
+    background-color: transparent;
+    border: none;
+    width: 30px;
+    cursor: pointer;
+    margin-left: 5px;
+  }
 
-.normal-quantity-selector {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between !important;
-  width: auto;
-}
+  .item-list {
+    max-height: 100% !important;
+    min-height: 150px !important;
+    width: 100% !important;
+    border-radius: 0 !important;
+  }
 
-.quantity-input {
-  margin-bottom: auto;
-  margin-left: 10px;
-  margin-right: 10px;
-}
+  .stage1 {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    margin-top: 15px;
+    padding: 0 10%;
+  }
 
-.hasReset {
-  background-color: transparent;
-  border: none;
-  width: 25px;
-  cursor: pointer;
-  margin-left: 5px;
-}
+  .stage-btn {
+    padding: 2px;
+    color: #ffffff;
+    font-weight: bold;
+    background-color: #5227cc;
+    border-radius: 10px;
+    width: 70px;
+    border: 3px solid #311b92;
+  }
 
-.item-list {
-  max-height: 100% !important;
-  min-height: 150px !important;
-  width: 100% !important;
-  border-radius: 0 !important;
-}
+  .confirm-btn {
+    padding: 2px;
+    color: #ffffff;
+    font-weight: bold;
+    background-color: #5227cc;
+    border-radius: 10px;
+    width: 120px;
+  }
 
-.stage1 {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  margin-top: 15px;
-  padding: 0 10%;
-}
+  .final-content p {
+    color: #7749f8;
+  }
 
-.stage-btn {
-  padding: 2px;
-  color: #ffffff;
-  font-weight: bold;
-  background-color: #5227cc;
-  border-radius: 10px;
-  width: 70px;
-  border: 3px solid #311b92;
-}
+  .add-and-rest-Lists {
+    padding: 5px 20px;
+    display: flex;
+    flex-direction: row-reverse;
+    margin-top: auto;
+    background-color: #d0d0d0;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
 
-.confirm-btn {
-  padding: 2px;
-  color: #ffffff;
-  font-weight: bold;
-  background-color: #5227cc;
-  border-radius: 10px;
-  width: 120px;
-}
+  .reset-all {
+    width: 40px;
+    height: 40px;
+    background-color: #5227cc;
+    border-radius: 10px;
+  }
 
-.final-content p {
-  color: #7749f8;
-}
+  .reset-all img {
+    width: 30px;
+    filter: invert(1);
+  }
 
-.add-and-rest-Lists {
-  padding: 5px 20px;
-  display: flex;
-  flex-direction: row-reverse;
-  margin-top: auto;
-  background-color: #d0d0d0;
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-}
+  .recicler-all {
+    padding: 5px 20px;
+    display: flex;
+    flex-direction: row-reverse;
+    margin-top: auto;
+    background-color: #d0d0d0;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
 
-.reset-all {
-  width: 40px;
-  height: 40px;
-  background-color: #5227cc;
-  border-radius: 10px;
-}
+  .recicler-all-btn {
+    width: 40px;
+    height: 40px;
+    background-color: #5227cc;
+    border-radius: 10px;
+  }
 
-.reset-all img {
-  width: 30px;
-  filter: invert(1);
-}
+  .recicler-all img {
+    width: 30px;
+    filter: invert(1);
+  }
 
-.recicler-all {
-  padding: 5px 20px;
-  display: flex;
-  flex-direction: row-reverse;
-  margin-top: auto;
-  background-color: #d0d0d0;
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-}
+  .add-btn-request {
+    background-color: #5227cc;
+    color: #fdfcfe;
+    border-radius: 12px;
+    width: 100%;
+    max-width: 150px;
+    height: 35px;
+    font-size: 18px;
+    font-weight: bold;
+    margin: auto 0;
+    cursor: pointer;
+    border: none;
+    text-align: center;
+    padding: 0 10px;
+  }
 
-.recicler-all-btn {
-  width: 40px;
-  height: 40px;
-  background-color: #5227cc;
-  border-radius: 10px;
-}
+  .om-final-check {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    width: 65%;
+    margin: 0 auto;
+  }
 
-.recicler-all img {
-  width: 30px;
-  filter: invert(1);
-}
+  .om-final-check p {
+    color: #5227cc;
+    font-weight: bold;
+    font-size: x-large;
+  }
 
-.add-btn-request {
-  background-color: #5227cc;
-  color: #fdfcfe;
-  border-radius: 12px;
-  width: 100%;
-  max-width: 150px;
-  height: 35px;
-  font-size: 18px;
-  font-weight: bold;
-  margin: auto 0;
-  cursor: pointer;
-  border: none;
-  text-align: center;
-  padding: 0 10px;
-}
+  .offercheck {
+    border-radius: 10px;
+    border: 5px solid #5227cc;
+    overflow: hidden;
+  }
 
-.quantity-btn {
-  background-color: #7749f8;
-  color: #ffffff;
-  font-weight: bold;
-  border: 1px solid black;
-  height: 30px;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+  .recicler-Item {
+    position: absolute;
+    display: flex;
+    width: 60px;
+    height: 60px;
+  }
 
-.quantity-reset-btn {
-  background-color: #7749f8;
-  color: #ffffff;
-  font-weight: bold;
-  border: 1px solid black;
-  height: 30px;
-  border-radius: 5px;
-  padding: 2px;
-  text-align: center;
-}
-
-.om-final-check{
- display: flex;
- flex-direction: column;
- justify-content: center;
- align-content: center;
- text-align: center;
- width: 65%;
- margin: 0 auto;
-}
-
-.om-final-check p {
-  color: #5227cc;
-  font-weight: bold;
-  font-size: x-large;
-}
-
-.offercheck {
- border-radius: 10px;
- border: 5px solid #5227cc;
- overflow: hidden;
+  .recicler-Item img {
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    margin-top: 5px;
+    margin-left: 4px;
+    cursor: pointer;
+    z-index: 2;
+  }
 }
